--- a/pom.xml
+++ b/pom.xml
@@ -1,137 +1,193 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>integration</groupId>
-  <artifactId>integration</artifactId>
-  <packaging>war</packaging>
-  <version>1.0.0</version>
-  <name>integration Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  
-  <properties>  
-      <!-- #定义变量，常用于定义框架、jar包等的版本号和项目相关的名称 -->
-      <java.version>1.8</java.version>
-      <spring.version>5.0.1.RELEASE</spring.version>
-      <jetty.version>9.4.7.v20170914</jetty.version> 
-      <rabbitmq.version>5.1.1</rabbitmq.version>
-      <junit.version>4.12</junit.version>
-      <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
-      <jstl.version>1.2</jstl.version>
-      <commons.version>2.6</commons.version>
-      <tomcat6-maven-plugin.version>2.2</tomcat6-maven-plugin.version>
-      <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-      <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
-      
-      <!-- 文件编码设置 -->
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties> 
-  
-  <dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-    		<groupId>javax.servlet</groupId>
-    		<artifactId>javax.servlet-api</artifactId>
-    		<version>${javax.servlet-api.version}</version>
-    		<scope>provided</scope>
-		</dependency>
-		<dependency>
-    		<groupId>jstl</groupId>
-    		<artifactId>jstl</artifactId>
-    		<version>${jstl.version}</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/net.oschina.zcx7878/fastdfs-client-java -->
-		<dependency>
-		    <groupId>net.oschina.zcx7878</groupId>
-		    <artifactId>fastdfs-client-java</artifactId>
-		    <version>1.27.0.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>${commons.version}</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
-		<dependency>
-		    <groupId>commons-lang</groupId>
-		    <artifactId>commons-lang</artifactId>
-		    <version>${commons.version}</version>
-		</dependency>
-		
-		
-		<!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
-		<dependency>
-		    <groupId>com.rabbitmq</groupId>
-		    <artifactId>amqp-client</artifactId>
-		    <version>${rabbitmq.version}</version>
-		</dependency>
-	</dependencies>
-	
-	
-  <build>
-    <finalName>integration</finalName>
-    <pluginManagement>
-      <plugins>
-      	<!-- 指定编译jdk为1.8 -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven-compiler-plugin.version}</version>
-            <configuration>
-                <target>${java.version}</target>
-                <resource>${java.version}</resource>
-            </configuration>
-        </plugin>
-        
-        <!-- Tomcat插件的配置 -->
-        <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat6-maven-plugin</artifactId>
-          <version>${tomcat6-maven-plugin.version}</version>
-          <configuration>
-          	<url>http://localhost:8080/manager/text</url>
-          	<server>tomcat</server>
-          	<username>admin</username>
-          	<password>admin123</password>
-          </configuration>
-        </plugin>
-        
-        <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat7-maven-plugin</artifactId>
-          <version>${tomcat7-maven-plugin.version}</version>
-          <configuration>
-          	<url>http://localhost:8080/manager/text</url>
-          	<server>tomcat</server>
-          	<username>admin</username>
-          	<password>admin123</password>
-          </configuration>
-        </plugin>
-        
-        <!-- Jetty 插件的配置 -->
-        <plugin>
-        	<groupId>org.eclipse.jetty</groupId>
-		    <artifactId>jetty-maven-plugin</artifactId>
-		    <version>${jetty.version}</version>
-		    <configuration>
-		    	<scanIntervalSeconds>10</scanIntervalSeconds>
-			    <webApp>
-			      <contextPath>/</contextPath>
-			    </webApp>
-	            <httpConnector>
-	                <port>8080</port>
-	            </httpConnector>
-		  </configuration>
-        </plugin>
-        
-      </plugins>
-    </pluginManagement>
-  </build>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>integration</groupId>
+    <artifactId>integration</artifactId>
+    <packaging>war</packaging>
+    <version>1.0.0</version>
+    <name>integration Maven Webapp</name>
+    <url>http://maven.apache.org</url>
+
+    <properties>
+        <!-- #定义变量，常用于定义框架、jar包等的版本号和项目相关的名称 -->
+        <java.version>1.8</java.version>
+        <spring.version>5.0.1.RELEASE</spring.version>
+        <jetty.version>9.4.7.v20170914</jetty.version>
+        <rabbitmq.version>5.1.1</rabbitmq.version>
+        <junit.version>4.12</junit.version>
+        <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+        <jstl.version>1.2</jstl.version>
+        <commons.version>2.6</commons.version>
+        <tomcat6-maven-plugin.version>2.2</tomcat6-maven-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
+        <jetcd-core.version>0.0.1</jetcd-core.version>
+
+        <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
+        <slf4j-api.version>1.7.25</slf4j-api.version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j-nop.version>1.7.25</slf4j-nop.version>
+        <slf4j-simple.version>1.7.5</slf4j-simple.version>
+
+        <!-- 文件编码设置 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/net.oschina.zcx7878/fastdfs-client-java -->
+        <dependency>
+            <groupId>net.oschina.zcx7878</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+            <version>1.27.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.rabbitmq/amqp-client -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>${rabbitmq.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.coreos/jetcd-core -->
+        <dependency>
+            <groupId>com.coreos</groupId>
+            <artifactId>jetcd-core</artifactId>
+            <version>${jetcd-core.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-log4j12.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>${slf4j-nop.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j-simple.version}</version>
+        </dependency>
+
+    </dependencies>
+
+
+    <build>
+        <finalName>integration</finalName>
+        <pluginManagement>
+            <plugins>
+                <!-- 指定编译jdk为1.8 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <target>${java.version}</target>
+                        <source>${java.version}</source>
+                    </configuration>
+                </plugin>
+
+                <!-- Tomcat插件的配置 -->
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat6-maven-plugin</artifactId>
+                    <version>${tomcat6-maven-plugin.version}</version>
+                    <configuration>
+                        <url>http://localhost:8080/manager/text</url>
+                        <server>tomcat</server>
+                        <username>admin</username>
+                        <password>admin123</password>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>${tomcat7-maven-plugin.version}</version>
+                    <configuration>
+                        <url>http://localhost:8080/manager/text</url>
+                        <server>tomcat</server>
+                        <username>admin</username>
+                        <password>admin123</password>
+                    </configuration>
+                </plugin>
+
+                <!-- Jetty 插件的配置 -->
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>${jetty.version}</version>
+                    <configuration>
+                        <scanIntervalSeconds>10</scanIntervalSeconds>
+                        <webApp>
+                            <contextPath>/</contextPath>
+                        </webApp>
+                        <httpConnector>
+                            <port>8080</port>
+                        </httpConnector>
+                    </configuration>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
