--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
             <version>${marathon-client.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.21</version>
+        </dependency>
 
     </dependencies>
 
